...
          exitStyle={{ opacity: 0 }}
        />
        <Dialog.Content
          bordered
          elevate
          key="content"
          testID="PromptDialog.Content"
          animation={[
            'quick',
            { opacity: { overshootClamping: true } },
          ]}
          enterStyle={{ opacity: 0, scale: 0.95, y: -10 }}
          exitStyle={{ opacity: 0, scale: 0.95, y: -10 }}
...
            onSubmitEditing={handleSubmit}
            autoCapitalize="none"
            autoCorrect={false}
          />
          <XStack gap="$3" justifyContent="flex-end">
            <Dialog.Close displayWhenAdapted asChild>
              <Button testID="PromptDialog.CancelButton" size="$3" chromeless>
                Cancel
              </Button>
            </Dialog.Close>
            <Button testID="PromptDialog.SubmitButton" size="$3" theme="blue" onPress={handleSubmit}>
              {submitLabel}
            </Button>
...
