...
        <Separator marginVertical="$1" />
        <SettingsRow
          icon="rss"
          label="Manage feeds"
          value={feedCount === 0 ? 'None' : `${feedCount} feed${feedCount === 1 ? '' : 's'}`}
          onPress={() => router.push('/rss-feeds')}
          testID="Settings.RssFeeds"
        />
        <Separator />
        <SettingsRow
          icon="folder-o"
          label="RSS upload path"
          value={rssUploadPath}
...
